pagination and review

--- a/product/templates/product/shop.htm
+++ b/product/templates/product/shop.htm
@@ -30,11 +30,11 @@
 						<h4 class="widget-title">Category</h4>
 							<select class="form-control" name='product_type'>
 								<option key=''> Search by category </option>
-								<option key='medicine'> Medicine</option>
+								<option key='medicine'  > Medicine</option>
 								<option key='device'>Device</option>
 								<option key='hygenic_product'>Hygenic Product </option>
 							</select>
-							<input class="form-control mr-sm-2" type="search" placeholder="Search by name of product" aria-label="Search" name="">
+							<input class="form-control mr-sm-2" type="search" placeholder="Search by name of product" aria-label="Search" name="title">
 							<button class="btn btn-outline-success my-2 my-sm-0 mt-10" type="submit">Search</button>
                     </form>
 	            </div>
