--- a/templates/snippets/vendors.htm
+++ b/templates/snippets/vendors.htm
@@ -24,7 +24,7 @@
                         <dd>{{vendor.vendor.address}}</dd>
                     </dl>
                     <!-- prescription Doctor -->
-                    <span class="li" ><a href="#!" class="btn btn-main btn-small btn-round-full mt-20 ml-85" data-target="#MySecondmodal" data-toggle="modal" id="float-l"><i class="tf-ion-ios-upload-outline"></i> upload prescription</a></button>
+                    <span class="li" ><a href="/customer/vendor-detail/{{vendor.vendor.id}}" class="btn btn-main btn-small btn-round-full mt-20 ml-85" id="float-l"> View Vendor</a></button>
                             
 
                 </div>
