--- a/customer/templates/customer/doctor-appointment-list.htm
+++ b/customer/templates/customer/doctor-appointment-list.htm
@@ -64,6 +64,24 @@
         </div>
     </div>
 </section>
+
+<div class="pagination">
+    <span class="step-links">
+        {% if appointments.has_previous %}
+            <a href="?page=1">&laquo; first</a>
+            <a href="?page={{ appointments.previous_page_number }}">previous</a>
+        {% endif %}
+
+        <span class="current">
+            Page {{ appointments.number }} of {{ appointments.paginator.num_pages }}.
+        </span>
+
+        {% if appointments.has_next %}
+            <a href="?page={{ appointments.next_page_number }}">next</a>
+            <a href="?page={{ appointments.paginator.num_pages }}">last &raquo;</a>
+        {% endif %}
+    </span>
+</div>
 <!-- .modal -->
 
 {% for appointment in appointments%}
