--- a/product/templates/product/customer_detail.htm
+++ b/product/templates/product/customer_detail.htm
@@ -115,7 +115,7 @@
 				<div class="tabCommon mt-20">
 					<ul class="nav nav-tabs">
 						<li class="active"><a data-toggle="tab" href="#details" aria-expanded="true">Details</a></li>
-						<li class=""><a data-toggle="tab" href="#reviews" aria-expanded="false">Reviews (3)</a></li>
+						<li class=""><a data-toggle="tab" href="#reviews" aria-expanded="false">Reviews ({{reviews.count}})</a></li>
 					</ul>
 					<div class="tab-content patternbg">
 						<div id="details" class="tab-pane fade active in">
@@ -124,82 +124,41 @@
 						</div>
 						<div id="reviews" class="tab-pane fade">
 							<div class="post-comments">
+								<div>
+									<form action="/customer/add/comment/{{product.id}}/" method="POST">
+										{% csrf_token %}
+										<textarea row="8" column="30" name="review"></textarea>
+										<p>{{message}}</p>
+										<button type="submit" class="btn btn-main" placeholder="Write your review on this product">Add Review</button>
+									</form>
+								</div>
 						    	<ul class="media-list comments-list m-bot-50 clearlist">
 								    <!-- Comment Item start-->
-								    <li class="media">
+									{% for review in reviews%}
+										<li class="media">
 
-								        <a class="pull-left" href="#!">
-								            <img class="media-object comment-avatar" src={% static 'images/blog/avater-1.jpg' %} alt="" width="50" height="50" />
-								        </a>
+											<a class="pull-left" href="#!">
+												<img class="media-object comment-avatar" src="/media/{{review.image.image}}" alt="" width="50" height="50" />
+											</a>
 
-								        <div class="media-body">
-								            <div class="comment-info">
-								                <h4 class="comment-author">
-								                    <a href="#!">Jonathon Andrew</a>
-								                	
-								                </h4>
-								                <time datetime="2013-04-06T13:53">July 02, 2015, at 11:34</time>
-								                <a class="comment-button" href="#!"><i class="tf-ion-chatbubbles"></i>Reply</a>
-								            </div>
+											<div class="media-body">
+												<div class="comment-info">
+													<h4 class="comment-author">
+														<a href="#!">{{review.customer.full_name}}</a>
+														
+													</h4>
+													<time datetime="2013-04-06T13:53">{{review.timestamp}}</time>
+													
+												</div>
 
-								            <p>
-								                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque at magna ut ante eleifend eleifend.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod laborum minima, reprehenderit laboriosam officiis praesentium? Impedit minus provident assumenda quae.
-								            </p>
-								        </div>
+												<p>
+													{{review.description}}
+												</p>
+											</div>
 
-								    </li>
+										</li>
+									{% endfor %}
 								    <!-- End Comment Item -->
-
-								    <!-- Comment Item start-->
-								    <li class="media">
-
-								        <a class="pull-left" href="#!">
-								            <img class="media-object comment-avatar" src={% static 'images/blog/avater-4.jpg' %} alt="" width="50" height="50" />
-								        </a>
-
-								        <div class="media-body">
-
-								            <div class="comment-info">
-								                <div class="comment-author">
-								                    <a href="#!">Jonathon Andrew</a>
-								                </div>
-								                <time datetime="2013-04-06T13:53">July 02, 2015, at 11:34</time>
-								                <a class="comment-button" href="#!"><i class="tf-ion-chatbubbles"></i>Reply</a>
-								            </div>
-
-								            <p>
-								                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque at magna ut ante eleifend eleifend. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni natus, nostrum iste non delectus atque ab a accusantium optio, dolor!
-								            </p>
-
-								        </div>
-
-								    </li>
-								    <!-- End Comment Item -->
-
-								    <!-- Comment Item start-->
-								    <li class="media">
-
-								        <a class="pull-left" href="#!">
-								            <img class="media-object comment-avatar" src={% static 'images/blog/avater-1.jpg' %} alt="" width="50" height="50">
-								        </a>
-
-								        <div class="media-body">
-
-								            <div class="comment-info">
-								                <div class="comment-author">
-								                    <a href="#!">Jonathon Andrew</a>
-								                </div>
-								                <time datetime="2013-04-06T13:53">July 02, 2015, at 11:34</time>
-								                <a class="comment-button" href="#!"><i class="tf-ion-chatbubbles"></i>Reply</a>
-								            </div>
-
-								            <p>
-								                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque at magna ut ante eleifend eleifend.
-								            </p>
-
-								        </div>
-
-								    </li>
 							</ul>
 							</div>
 						</div>
