--- a/templates/snippets/product-model.htm
+++ b/templates/snippets/product-model.htm
@@ -1,7 +1,7 @@
 {% load static%}
 
 <!-- Modal -->
-<div class="modal product-modal fade" id="product-modal_{{ forloop.counter0 }}">
+<div class="modal product-modal fade" id="product-modal_{{ image.product.id }}">
     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
         <i class="tf-ion-close"></i>
     </button>
