--- a/customer/templates/customer/doctor-appointment-list.htm
+++ b/customer/templates/customer/doctor-appointment-list.htm
@@ -52,7 +52,7 @@
                                                 <a class="btn btn-default" href="/doctor/appointment/cancel/{{appointment.id}}" > Cancel </a>
                                                 <a class="btn btn-default" href="/doctor/payment/{{appointment.id}}" > Make Payment </a>
                                             {% endif %}
-                                            <span class="btn btn-default" data-target="#changeStatus_{{ forloop.counter0 }}" data-toggle="modal">Details</span>
+                                            <span class="btn btn-default" data-target="#changeStatus_{{ appointment.id }}" data-toggle="modal">Details</span>
                                         </td>
                                     </tr>
                                 {% endfor %}
@@ -64,20 +64,15 @@
         </div>
     </div>
 </section>
-<div class="flex-pagination  mb-3">
-    <div id="first1"class="pagination-btn">First</div>
-    <div id="current1" class="pagination-btn">Page {{ appointments.number }} of {{ appointments.paginator.num_pages }}.</div>
-    <div id="previous1" class="pagination-btn">previous</div>
-</div>
 
-<div class="pagination">
+<div class="flex-pagination mb-3">
     <div class="step-links">
         {% if appointments.has_previous %}
-            <span id="first"><a href="?page=1">&laquo; first</a></span>
-           <span id="previous"><a href="?page={{ appointments.previous_page_number }}">previous</a></span>
+            <span id="first1"><a href="?page=1">&laquo; first</a></span>
+           <span id="previous1"><a href="?page={{ appointments.previous_page_number }}">previous</a></span>
         {% endif %}
     
-        <span id="current">
+        <span id="current1">
             Page {{ appointments.number }} of {{ appointments.paginator.num_pages }}.
         </span>
      
@@ -90,7 +85,7 @@
 <!-- .modal -->
 
 {% for appointment in appointments%}
-<div class="modal fade noBig" id="changeStatus_{{ forloop.counter0 }}">
+<div class="modal fade noBig" id="changeStatus_{{ appointment.id }}">
     <div class="modal-dialog noBig">
         <div class="modal-content product-checkout-details noBig">
             <div class="modal-header block noBig">
