--- a/product/templates/product/list.htm
+++ b/product/templates/product/list.htm
@@ -16,8 +16,9 @@
             </ul>
             <div style="margin-top: 20px;">
                 <nav class="navbar navbar-light bg-light text-center">
-                    <form class="form-inline">
-                      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                    <form class="form-inline" method="POST" action="/product/list/">
+                        {% csrf_token %}
+                      <input class="form-control mr-sm-2" type="search" placeholder="Search product by name" name="title" aria-label="Search by name">
                       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
                     </form>
                   </nav>
@@ -53,5 +54,24 @@
         </div>
     </div>
 </section>
+
+<div class="flex-pagination mb-3">
+    <div class="step-links">
+        {% if images.has_previous %}
+            <span id="first1"><a href="?page=1">&laquo; first</a></span>
+           <span id="previous1"><a href="?page={{ images.previous_page_number }}">previous</a></span>
+        {% endif %}
+    
+        <span id="current1">
+            Page {{ images.number }} of {{ images.paginator.num_pages }}.
+        </span>
+     
+        {% if images.has_next %}
+            <a href="?page={{ images.next_page_number }}">next</a>
+            <a href="?page={{ images.paginator.num_pages }}">last &raquo;</a>
+        {% endif %}
+    </div>
+</div>
+
 {% include 'snippets/footer2.htm'%}
 {% endblock content %}
