--- a/product/templates/product/updatedevice.htm
+++ b/product/templates/product/updatedevice.htm
@@ -61,6 +61,20 @@
                 {{img_form.image.errors}}   
               <!-- <input class="mt-20" type="file" id="image" multiple required> -->
               </div>
+              <div class="form-group">
+                <label for="CurrentImages">Current Images</label>
+                <br>
+                {% for image in images %}		
+                  <div class="col-md-10">
+                    <div class="product-item">
+                      <div class="product-thumb">
+                        <img class="img-responsive" src="/media/{{image.image}}" alt={{image.description}} />
+                      </div>
+                    </div>
+                  </div>	
+                {% endfor %}
+                  
+              </div>
               <hr>
               <div class="text-center">
                 <button type="submit" class="btn btn-main text-center" >Update Product</button>
