--- a/service/templates/service/detail.htm
+++ b/service/templates/service/detail.htm
@@ -52,8 +52,8 @@
 							{{service.expiry_date}}
 						</div>
 					{% endif %}
-					<a href="/service/update/{{service.service_type}}/{{service.id}}" class="btn btn-main mt-20">update</a>
-					<a href="/service/delete/{{service.service_type}}/{{service.id}}" class="btn btn-main mt-20">delete</a>
+					<a href="/service/update/{{service.service_type}}/{{service.id}}/" class="btn btn-main mt-20">update</a>
+					<a href="/service/delete/{{service.id}}/" class="btn btn-main mt-20">delete</a>
 				
 				
 				</div>
