--- a/templates/snippets/doctor-consultation.htm
+++ b/templates/snippets/doctor-consultation.htm
@@ -83,7 +83,7 @@
                 <img class="img-responsive mt-50" src="/media/{{doctor.image}}">
             </div>
             <div class="col-xs-6 col-md-4 mt-10 noBig">
-                <h3><a href="/customerdoctor-detail/{{doctor.doctor.id}}"> {{doctor.doctor.full_name}}</a></h3>
+                <h3><a href="/customer/doctor-detail/{{doctor.doctor.id}}/"> {{doctor.doctor.full_name}}</a></h3>
                 <p class="text-info">{{doctor.doctor.Specialist}}</p>
                 <p>{{doctor.doctor.degree}}</p>
                 <p>{{doctor.doctor.description}}</p>
