--- a/customer/templates/customer/dashboard.htm
+++ b/customer/templates/customer/dashboard.htm
@@ -15,18 +15,19 @@
                     <li class="noBig"><a href="/customer/appointment/">Lab Appointments</a></li>
                     <li class="noBig "><a href="/customer/completeappointment/">Completed Lab Appointments</a></li>
                 </ul>
-                <div class="dashboard-wrapper dashboard-user-profile noBig">
-                    <div class="media noBig">
-                        <div class="pull-left noBig">
+                <div class="dashboard-wrapper dashboard-user-profile">
+                    <div class="media">
+                        <div class="pull-left text-center ">
                             <!-- <img class="media-object user-img" src='/media/'.{{customer_img.image}} alt="Image"> -->
                             <img class="media-object user-img" src="/media/{{customer_img.image}} " alt="Profile image of {{customer.shop_name}}">
+                            <a href="/customer/customerupdate/{{customer.id}}" class="btn btn-main mt-20">Edit <i class="tf-ion-edit"></i></a>
                         </div>
-                        <div class="media-body noBig">
-                            <h2 class="media-heading">Welcome {{customer.full_name}}</h2>
+                        <div>
+                            <h2 class="media-heading" style="font-size: 25px;letter-spacing: 0px;line-height: 19px;padding-left: 240px;padding-top: 45px">Welcome {{customer.full_name}}</h2>
                         </div>
-                    </div>
-                        <div class="media-body">
-                            <ul class="user-profile-list">
+                    
+                        <div class="media-body" >
+                            <ul class="user-profile-list" >
                                 <h3 class="font-weight-bold ">Customer Details</h3>
                                 <li><span>Full Name:</span>{{customer.full_name}}</li>
                                 <li><span>Gender:</span>{{customer.gender}}</li>
@@ -34,56 +35,12 @@
                                 <li><span>Phone:</span>{{customer.contact_number}}</li>
                                 <li><span>Address:</span>{{customer.address}}</li>
                             </ul>
-                            <hr>
                         </div>
-                    </div>
+                    </div>    
                 </div>
             </div>
         </div>
     </div>
 </section>
 {% include 'snippets/copyright-footer.htm'%}
-<!-- .modal -->
-<div class="modal fade" id="MyProfileModal">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">×</button> 
-                <h4 class="modal-title">
-                    Edit your profile
-                </h4>                                                             
-                <hr>
-                <div class="media dashboard-wrapper">
-                    <div class="text-center" href="#!">
-                        <img class="media-object user-img" id="profile" src="/media/{{customer_img.image}}"  alt="Profile image of {{customer.shop_name}}">
-                        <a href="#x" class="btn btn-transparent mt-20">Change Image</a>
-                    </div>
-                <dl class="dl-horizontal details-list">
-                    <dt class="mt-10">Full Name:</dt>
-                    <dd><input type="text" class="form-control"  placeholder="hari lal yadhab"></dd>
-                    <dt class="mt-10">Pharmacy Name:</dt>
-                    <dd><input type="text" class="form-control"  placeholder="epharmacy"></dd>
-                    <dt class="mt-10">Email:</dt>
-                    <dd><input type="email" class="form-control"  placeholder="hari.yadhab1234@gmail.com"></dd>
-                    <dt class="mt-10">Address:</dt>
-                    <dd><input type="text" class="form-control"  placeholder="balkumari"></dd>
-                    <dt class="mt-10">Contact No:</dt>
-                    <dd><input type="text" class="form-control"  placeholder="9803678422"></dd>
-                    <dt class="mt-10">Birth of date:</dt>
-                    <dd><input type="text" class="form-control datepicker-test"  placeholder="07/18/1988"></dd>
-                    <dt>Registered Name:</dt>
-                    <dd>{{customer.business_name}}</dd>
-                    <dt>PAN NO</dt>
-                    <dd>{{customer.pan_number}}</dd>
-                    <dt>VAT NO</dt>
-                    <dd>{{customer.vat_number}}</dd> 
-                </dl>
-            </div>                         
-            <div class="modal-footer">
-                <button class="btn-css btn btn-primary">Update</button>
-                <button type="button" class="btn-css btn btn-default" data-dismiss="modal">Close</button>                               
-            </div>
-        </div> 
-    </div>                                                                      
-</div> 
 {% endblock content %}
