--- a/service/templates/service/updatebloodbank.htm
+++ b/service/templates/service/updatebloodbank.htm
@@ -20,7 +20,7 @@
             <h3 class="text-center"><i class="tf-ion-android-add"></i> Update Service</h3>
             <h4 class="mt-10">Blood Bank</h4>
             <!-- Blood Bank form -->
-            <form enctype="multipart/form-data" class="text-left clearfix" action="/service/update/bank/{{service.id}}" method="POST" id="bank" style="display: block;">
+            <form enctype="multipart/form-data" class="text-left clearfix" action="/service/update/bloodbank/{{service.id}}/" method="POST" id="bank" style="display: block;">
               {% csrf_token %}
               <input type="hidden" name="service_type" value="bloodbank">
               <div class="form-group">
