--- a/service/templates/service/updatehematology.htm
+++ b/service/templates/service/updatehematology.htm
@@ -20,7 +20,7 @@
             <h3 class="text-center"><i class="tf-ion-android-add"></i> Update Service</h3>
             <h4 class="mt-10">Hematology</h4>
             <!-- Clinical hematology form -->
-            <form enctype="multipart/form-data" class="text-left clearfix" action="/service/update/hematology/{{service.id}}" method="POST" id="hematology" style="display: block;">
+            <form enctype="multipart/form-data" class="text-left clearfix" action="/service/update/hematology/{{service.id}}/" method="POST" id="hematology" style="display: block;">
               {% csrf_token %}
               <input type="hidden" name="service_type" value="hematology">
               <div class="form-group">
