--- a/service/templates/service/updatereproductivebiology.htm
+++ b/service/templates/service/updatereproductivebiology.htm
@@ -20,9 +20,9 @@
             <h3 class="text-center"><i class="tf-ion-android-add"></i> Update Service</h3>
             <h4 class="mt-10">Reproductive Biology</h4>
             <!-- reproductive biology form -->
-            <form enctype="multipart/form-data" class="text-left clearfix" action="/service/update/reproductive/{{service.id}}" method="POST" id="reproductive" style="display: block;">
+            <form enctype="multipart/form-data" class="text-left clearfix" action="/service/update/reproductivebiology/{{service.id}}/" method="POST" id="reproductive" style="display: block;">
               {% csrf_token %}
-              <input type="hidden" name="service_type" value="reproductive">
+              <input type="hidden" name="service_type" value="reproductivebiology">
               <div class="form-group">
                 <label for="inputName">Name of test:</label>
                 {{form.title}}
