--- a/service/templates/service/uploadreport.htm
+++ b/service/templates/service/uploadreport.htm
@@ -23,33 +23,7 @@
             <!-- appointment form -->
             <form enctype="multipart/form-data" class="text-left clearfix" action="/service/upload/report/{{id}}/" method="POST" id="appointment" >
               {% csrf_token %}
-              <input type="hidden" name="appointment" value="appointment">
-              <div class="form-group">
-                <label for="inputName">Name:</label>
-                {{form.full_name}}
-                <p class="help">{{form.full_name.errors }}</p>
-              </div>
-              <div class="form-group">
-                <label for="inputAddress">Address:</label>
-                {{form.address}}
-                <p class="help">{{form.address.errors }}</p>
-              </div>
-              <div class="form-group">
-                <label for="inputAger">Date of Birth:</label>
-                {{form.dob}}
-                <p class="help">{{form.dob.errors }}</p>
-              </div>
-              <div class="form-group">
-                <label for="inputContact">Contact:</label>
-                {{form.contact}}
-                <p class="help">{{form.contact.errors }}</p>
-              </div>
-              <div class="form-group">
-                <label for="inputEmail">Email:</label>
-                {{form.email}}
-                <p class="help">{{form.email.errors }}</p>
-              </div>
-              <div class="form-group">
+              <div>
                 <label for="inputAppointmentTime">Appointment Date:</label>
                 {{form.appointment}}
                 <p class="help">{{form.appointment.errors }}</p>
